Fix Z-index bug that covered up the nav bar

--- a/app/assets/stylesheets/pages/weclome.css.scss
+++ b/app/assets/stylesheets/pages/weclome.css.scss
@@ -6,6 +6,7 @@ $section-offset: 4 * $gutter;
 @import "colors";
 
 nav {
+  z-index: 1;
   background-color: $green;
   padding: 0.5*$gutter $gutter;
 
